
	XMPP:
	* Allow connecting to servers that only advertise GSSAPI and expect
	  a fallback to legacy IQ authentication (broken in 2.7.0).
	* Fix a crash when receiving custom emoticons that don't adhere to
	  the specification.
	* When initiating a file transfer, don't show resources that are certain
	  to not support file transfers in the resource selection dialog.

	Yahoo/Yahoo JAPAN:
	* Renamed "Use account proxy for SSL connections" to "Use account proxy
	  for HTTP and HTTPS requests" and tied the option to HTTP requests too.
	* Properly detect HTTP proxy server use when the HTTP proxy is the
	  global proxy server, an account-level non-HTTP proxy server is
	  configured, and the "Use account proxy for HTTP and HTTPS requests"
	  account option is turned off.  This fixes connecting for some HTTP
	  proxy servers.
	* Fall back to connecting to scsa.msg.yahoo.com (not configurable) if
	  the HTTP-based connect server lookup fails.  This does not work for
	  Yahoo JAPAN accounts.
	* Fix file transfers that get stuck with "Waiting for transfer to
	  begin".

version 2.7.1 (05/29/2010):
	General:
	* Build fixes on OpenSolaris.  (Brian Lu)
	* Add configure option --enable-trayicon-compat which installs tray
	  icons into directories that are compatible with older versions of
	  hicolor-icon-theme (0.9).

	Pidgin:
	* Restore the tray icon's blinking functionality.
	* Fix a crash setting moods when an account is disconnected.

	Bonjour:
	* Fix a crash on disconnect.

	ICQ:
	* Fix bug that caused HTML to be displayed in incoming messages.

	MSN:
	* Fix unnecessary bandwidth consumption for buddy icon requests when
	  buddies have capital letters in their passport addresses.
	* Support for direct connections, enabling faster file transfers,
	  smiley and buddy icon loading.  (Gábor Szuromi)

	XMPP:
	* Allow connecting to servers that advertise EXTERNAL (broken in
	  2.7.0)

	MXit:
	* Replace the MXit-specific mood management with the new standard Moods
	  API.